lining up with Steve

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,9 @@
     "document",
     "window",
     "-Promise"
+    "moment",
+    "markdown",
+    "jQuery"
   ],
   "browser" : true,
   "boss" : true,
